--- a/GRAPHS/.vscode/settings.json
+++ b/GRAPHS/.vscode/settings.json
@@ -16,6 +16,8 @@
         "xstring": "cpp",
         "xtree": "cpp",
         "xutility": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "chrono": "cpp",
+        "utility": "cpp"
     }
 }
