--- a/GRAPHS/.vscode/settings.json
+++ b/GRAPHS/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "utility": "cpp"
+        "utility": "cpp",
+        "ostream": "cpp",
+        "vector": "cpp"
     }
 }
